--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "telegraf": "^4.16.3",
+    "typegram": "^5.2.0",
     "typeorm": "^0.3.26"
   },
   "devDependencies": {
